fix spacing in post grid and cards

--- a/Main File/myblog/assets/scss/main.scss
+++ b/Main File/myblog/assets/scss/main.scss
@@ -99,7 +99,7 @@
    Post Cards
 ----------------------------------------------------------- */
 .post-card-wrapper {
-  padding: 20px; /* spacing around each card */
+  padding: 17px; /* spacing around each card */
 }
 
 .post-card {
